# data-science-template

./: README.md  main.py  pyproject.toml
docs/: doc.md
testes/: testes.ipynb
